Include db in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,9 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
-/*sqlite
+db.sqlite
 
 # Ignore all logfiles and tempfiles.
 /log/*
 !/log/.keep
 /tmp
-/Gemfile.lock
-
